app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  backend:
    serviceName: hello-world-nginx
    servicePort: 80
