hello-world-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-nginx-ingress
spec:
        rules:
                - http:
                        paths:
                                - path: /
                                  backend:
                                          serviceName: hello-world-nginx
                                          servicePort: 80
